Prototype routes and api docs (#4)
added prototype routes
